  + Improve HWLOC_MEMBIND_BIND (without the STRICT flag) on Linux kernel
    >= 5.15: If more than one node is given, the kernel may now use all
    of them instead of only the first one before falling back to others.
  + Expose cache os_index when available on Linux, it may be needed
    when using resctrl to configure cache partitioning, memory bandwidth
    monitoring, etc.
* Build
  + Allow to specify the ROCm installation for building the RSMI backend:
    - Use a custom installation path if specified with --with-rocm=<dir>.
    - Use /opt/rocm-<version> if specified with --with-rocm-version=<version>
      or the ROCM_VERSION environment variable.
    - Try /opt/rocm if it exists.
  

Version 2.5.0
-------------
* API
  + Add hwloc/windows.h to query Windows processor groups.
  + Add hwloc_get_obj_with_same_locality() to convert between objects
    with same locality, for instance NUMA nodes and Packages,
    or OS devices within a PCI device.
  + Add hwloc_distances_transform() to modify distances structures.
    - hwloc-annotate and lstopo have new distances-transform options.
  + hwloc_distances_add() is replaced with _add_create() followed by
    _add_values() and _add_commit(). See hwloc/distances.h for details.
  + Add topology flags to mitigate binding modifications during
    hwloc discovery, especially on Windows:
    - HWLOC_TOPOLOGY_FLAG_RESTRICT_TO_CPUBINDING and _MEMBINDING
      restrict discovery to PUs and NUMA nodes inside the binding.
    - HWLOC_TOPOLOGY_FLAG_DONT_CHANGE_BINDING prevents from ever
      changing the binding during discovery.
* Backends
  + Add a levelzero backend for oneAPI L0 devices, exposed as OS devices
    of subtype "LevelZero" and name such as "ze0".
    - Add hwloc/levelzero.h for interoperability between converting
      between L0 API devices and hwloc cpusets or OS devices.
  + Expose NEC Vector Engine cards on Linux as OS devices of subtype
    "VectorEngine" and name "ve0", etc.