@@ -30,13 +30,16 @@ Version 2.6.0
   + Expose cache os_index when available on Linux, it may be needed
     when using resctrl to configure cache partitioning, memory bandwidth
     monitoring, etc.
+* Tools
+  + lstopo has a better placement algorithm with respect to I/O
+    objects, see --children-order in the manpage for details.
 * Build
   + Allow to specify the ROCm installation for building the RSMI backend:
     - Use a custom installation path if specified with --with-rocm=<dir>.
     - Use /opt/rocm-<version> if specified with --with-rocm-version=<version>
       or the ROCM_VERSION environment variable.
     - Try /opt/rocm if it exists.
-  
+
 
 Version 2.5.0
 -------------
